tests/spec/compile-fail/055_iterator_for_requires_move_source.zn
// category: compile-fail
// profile: freestanding
// purpose: named non-Copy Iterator sources are consumed by for move iteration

module tests.fail.iteratorForRequiresMoveSource;

import core.option.{Option, None};

struct Counter {
    current: U32,
    end: U32,
}

impl Counter {
    destroy {}
}

impl Iterator<U32> for Counter {
    fn next(mut self) -> Option<U32> {
        return None;
    }
}

fn bad() -> U32 {
    val counter = Counter { current: 0, end: 1 };
    var total: U32 = 0;
    for move value in counter {
        total = total + value;
    }
    return total + counter.current; // expected-error: use of moved iterator after consuming for iteration
}
